--- a/src/main/resources/assets/mmorpg/lang/manual.json
+++ b/src/main/resources/assets/mmorpg/lang/manual.json
@@ -43,6 +43,7 @@
 "mmorpg.tooltip.socketable_item": "This Gem can be inserted into a Socket slot",
 "_comment": "RARITY ITEM NAMES",
 "_comment": "MISC ITEMS",
+"item.mmorpg.map": "Adventure Map",
 "item.mmorpg.loot_bag": "Gear Loot Bag",
 "item.mmorpg.map_bag": "Map Bag",
 "item.mmorpg.currency_bag": "Currency Bag",
