--- a/src/main/resources/assets/mmorpg/lang/manual.json
+++ b/src/main/resources/assets/mmorpg/lang/manual.json
@@ -43,6 +43,8 @@
 "item.mmorpg.stone.5": "Mythic Stone",
 
 "item.mmorpg.map": "Adventure Map",
+"item.mmorpg.stat_soul": "Gear Stat Soul",
+"item.mmorpg.set_map": "Set Map Utility",
 "item.mmorpg.loot_bag": "Gear Loot Bag",
 "item.mmorpg.map_bag": "Map Bag",
 "item.mmorpg.currency_bag": "Currency Bag",
