--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -440,7 +440,9 @@
 	"mmorpg.support_gem.fire_damage": "Fire Damage Support Gem",
 	"mmorpg.support_gem.fire_pene": "Fire Penetration Support Gem",
 	"mmorpg.support_gem.freeze_chance": "Freeze Chance Support Gem",
+	"mmorpg.support_gem.heal_at_low": "Immediate Care Support Gem",
 	"mmorpg.support_gem.health_on_hit": "Health On Hit Support Gem",
+	"mmorpg.support_gem.inc_heal": "Increased Healing Support Gem",
 	"mmorpg.support_gem.lightning_damage": "Lightning Damage Support Gem",
 	"mmorpg.support_gem.lightning_pene": "Lightning Penetration Support Gem",
 	"mmorpg.support_gem.magic_shield_on_hit": "Magic Shield On Hit Support Gem",
@@ -456,10 +458,13 @@
 	"mmorpg.support_gem.ranged_damage": "Ranged Damage Support Gem",
 	"mmorpg.support_gem.rare_cooldown": "Greater Cooldown Support Gem",
 	"mmorpg.support_gem.rare_mana_eff": "Greater Mana Cost Support Gem",
+	"mmorpg.support_gem.small_cdr": "Minor Cooldown Support Gem",
 	"mmorpg.support_gem.spell_damage": "Spell Damage Support Gem",
 	"mmorpg.support_gem.spell_damage_no_crit": "Restrained Destruction Support Gem",
 	"mmorpg.support_gem.summon_damage": "Summon Damage Support Gem",
 	"mmorpg.support_gem.summon_duration": "Summon Duration Support Gem",
+	"mmorpg.support_gem.totem_damage": "Totem Damage Support Gem",
+	"mmorpg.support_gem.totem_dmg_cdr": "Primed Totems Support Gem",
 	"mmorpg.support_gem.water_pene": "Cold Penetration Support Gem",
 
 "_comment": " [CATEGORY]: SPELLS - NAMES",
@@ -602,9 +607,11 @@
 	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"item.mmorpg.currency.orb_of_linking": "Orb of Linking",
 	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
@@ -800,6 +807,7 @@
 	"mmorpg.word.defenses": "Defenses",
 	"mmorpg.word.deletesallaffixes": "Deletes all affixes",
 	"mmorpg.word.destroyprotect": "Destruction Guard",
+	"mmorpg.word.destroysitem": "DESTROYS the Item",
 	"mmorpg.word.distance": "Distance",
 	"mmorpg.word.divine": "Divine",
 	"mmorpg.word.downgradeaffix": "Downgrades an affix",
@@ -954,6 +962,7 @@
 	"mmorpg.word.requirements": "Requirements",
 	"mmorpg.word.requirementsnotmet": "Requirements not met",
 	"mmorpg.word.requireslevel": "Requires Level",
+	"mmorpg.word.rerollsstatnumbers": "Re-rolls stat numbers",
 	"mmorpg.word.resources": "Resources",
 	"mmorpg.word.road": "Road",
 	"mmorpg.word.robes": "Robes",
@@ -1027,6 +1036,7 @@
 	"mmorpg.word.upgradelvlto5": "Upgrade Level must be 0-4",
 	"mmorpg.word.upgradequality": "Upgrade Quality",
 	"mmorpg.word.upgradestone": "Upgrade Stone",
+	"mmorpg.word.upgradesuniquestats": "Adds 10% to unique stats",
 	"mmorpg.word.usableon": "Usable on",
 	"mmorpg.word.use_time": "Use Time",
 	"mmorpg.word.uses": "Uses",
@@ -1247,6 +1257,7 @@
 	"mmorpg.stat.lightning_resist": "Lightning Resistance",
 	"mmorpg.stat.lightning_vuln_crit": "§7Lightning Damage always crits you.",
 	"mmorpg.stat.lightning_weapon_damage": "Lightning Damage",
+	"mmorpg.stat.low_hp_healing": "Healing when Low",
 	"mmorpg.stat.magic_find": "Magic Find",
 	"mmorpg.stat.magic_shield": "Magic Shield",
 	"mmorpg.stat.magic_shield_heal": "Magic Shield Healing",
@@ -1497,9 +1508,11 @@
 	"item.mmorpg.currency.desc.affix_tier_up_down": "Unpredictably Adds or removes a tier from a random affix.",
 	"item.mmorpg.currency.desc.entangled_affix_upgrade": "Either Upgrades a random affix to maximum tier, or removes all affixes on an item.",
 	"item.mmorpg.currency.desc.entangled_quality": "Upgrades Quality of An Item, boosting gear potential",
+	"item.mmorpg.currency.desc.entangled_unique_reroll": "Upgrades unique stats by +10% or destroys the item.",
 	"item.mmorpg.currency.desc.orb_of_linking": "Re-rolls gem links, min is 1, max is 5 links.",
 	"item.mmorpg.currency.desc.orb_of_quality": "Upgrades Quality of An Item, quality boosts defenses.",
 	"item.mmorpg.currency.desc.socket_adder": "Has a chance to add a socket or do nothing",
+	"item.mmorpg.currency.desc.unique_reroll": "Unpredictably re-rolls the unique's stats",
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - DESCRIPTIONS",
 
@@ -1618,6 +1631,7 @@
 	"mmorpg.stat_desc.lifesteal": "Restore % of damage as health.",
 	"mmorpg.stat_desc.lightning_dmg_when_target_low_hp": "Low hp is 30% or less.",
 	"mmorpg.stat_desc.lightning_dot_damage": "Fire damage over time increases damage of burn, for example.",
+	"mmorpg.stat_desc.low_hp_healing": "Boosts healing done to low hp/magic shield targets. If magic shield is higher, it checks that, otherwise it checks HP.",
 	"mmorpg.stat_desc.magic_find": "Adds chance for higher rarity of items found.",
 	"mmorpg.stat_desc.magic_shield": "Like health, but works differently and might need different ways to restore.",
 	"mmorpg.stat_desc.magic_shield_heal": "A % of your healing goes to your magic shield too.",
